# SDL3-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  base128-encode.c  guix.scm  make.sh  sdl3-test.c  web-build.sh
assets/shaders/: shader.frag  shader.vert
glad/: CMakeLists.txt
glad/include/glad/: gles2.h
glad/src/: gles2.c
lib/glad/: CMakeLists.txt
lib/glad/src/: gles2.c
libraries/glad/include/glad/: gles2.h
sources/: main.c  shell.html
src/: main.c  main.cpp  shell.html
tools/: base128-decode.c
